--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,10 @@
 @string{apj = {The Astrophysical Journal}}
 @string{mnras = {Monthly Notices of the Royal Astronomical Society}}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+% LEADING
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+
 @leadarticle{omoruyi2024beads,
   title={Beads-on-a-string Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
   author={Omoruyi, O. and Tremblay, G. R. and Combes, F. and Davis, T. A. and Gladders, M. D. and Vikhlinin, A. and Nulsen, P. and Kharb, P. and Baum, S. A. and O’Dea, C. P. and Sharon, K. and Terrazas, B. A. and Nevin, R. and Schechter, A. L. and Zuhone, J. A. and McDonald, M. and Dahle, H. and Bayliss, M. B. and Connor, T. and Florian, M. and Rigby, J. R. and Vaddi, S.},
@@ -18,54 +22,55 @@
   type={lead},
   video={https://www.youtube.com/watch?v=blvcW0M-REU},
   html={https://ui.adsabs.harvard.edu/abs/2024ApJ...963....1O/abstract},
-  additional_info={Using high-resolution multi-wavelength data from Chandra, HST, ALMA, and LOFAR, we discovered a chain of 19 young stellar “beads” connected to a giant X-ray cavity in an intermediate-redshift cool-core cluster. We show that this star formation pattern likely arose from gas cooling in the turbulent core, a powerful AGN outburst displacing cold gas, and tidal interactions from merging galaxies. These results highlight how feedback, cooling, and mergers interact in complex ways, offering insight into the chaotic processes that shaped galaxies and clusters in the early Universe.}
+  abstract={Using high-resolution multi-wavelength data from Chandra, HST, ALMA, and LOFAR, we discovered a chain of 19 young stellar “beads” connected to a giant X-ray cavity in an intermediate-redshift cool-core cluster. We show that this star formation pattern likely arose from gas cooling in the turbulent core, a powerful AGN outburst displacing cold gas, and tidal interactions from merging galaxies. These results highlight how feedback, cooling, and mergers interact in complex ways, offering insight into the chaotic processes that shaped galaxies and clusters in the early Universe.}
 }
 
-
-@leadunpublished{omoruyi2025emulating,
-  title={Emulating the Illustris-TNG simulation with a Semi-analytic model},
-  author={Omoruyi, O. and Terrazas, B. and Cohen, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
-  year={2025},
-  numpages={25},
-  journal=mnras,
-  preview={tngsam.png},
-  type={lead},
-  pdf={tngsam.pdf},
-  additional_info={*Expected on arXiv March*}
-} 
-
-@leadunpublished{omoruyi2025view,
+@leadarticle{omoruyi2025a2597,
   title={A 600 ks Chandra View of Abell 2597},
   author={Omoruyi, O. and Tremblay, G. and Vikhlinin, A. and Dabhade, P. and Raychaudhury, S. and Markevitch, M. and Zuhone, J. and Nulsen, P. and Baum, S. A. and O’Dea, C. P. and Clarke, T. and Randall, S. and Kharb, P. and Gulati, S. and Vaddi, S.},
-  year={2024},
-  numpages={30},
+  year={2025},
   journal=apj,
   preview={a2597_chandra.png},
   pdf={omo_a2597.pdf},
-  additional_info={*Expected on arXiv March*}
+  type={lead},
+  additional_info={Accepted to ApJ. Expected on arXiv soon},
+  abstract={Using deep $\sim$600 ks Chandra observations with archival GMRT and SINFONI data, we mapped the impact of repeated AGN outbursts in Abell 2597, revealing seven cavities, weak shocks to $\sim$150 kpc, and a 57 kpc surface brightness deficit likely shaped by sloshing-driven magnetic amplification. We show that although the AGN injects energy comparable to the cooling luminosity, radiative cooling persists at $\sim$15 $M_\odot$ yr$^{-1}$, fueling a massive cold gas reservoir that Bondi accretion cannot supply. These results support chaotic cold accretion as the dominant fueling mode and provide a detailed view of how cooling, feedback, and gas dynamics regulate cool-core cluster evolution.}
+}
 
-} 
+@leadunpublished{omoruyi2026tngsam,
+  title={Emulating the IllustrisTNG Simulation with a Semi-analytic Model},
+  author={Omoruyi, O. and Terrazas, B. and Cohen, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
+  year={2026},
+  journal=mnras,
+  preview={tngsam.png},
+  pdf={tngsam.pdf},
+  type={lead},
+  additional_info={Submitted to MNRAS. Expected on arXiv January 2026},
+  abstract={By combining the strengths of the Santa Cruz semi-analytic model and the IllustrisTNG100 simulation, we developed the TNG SAM, a fast model calibrated to reproduce TNG’s gas and metal flows in stellar-feedback–dominated galaxies. We show that physically motivated updates to cooling, star formation, recycling, outflows, and gas re-accretion allow the SAM to recover TNG’s baryon cycle and global galaxy properties to within $\sim$30\% out to $z=6$. This work demonstrates that well-calibrated SAMs can capture much of the complex physics of hydrodynamical simulations while enabling efficient parameter studies across cosmological volumes.}
+}
 
-
-@leadunpublished{omoruyi2025hist,
-  title={The Extractive Gaze: How Race, Gender and Capitalism Shaped the Development of American Astronomical Stations in South Africa},
-  author={Omoruyi, O.},
-  abstract={Who is remembered in the history of science? Who gets credit for scientific discovery? Astronomy is often told as a story of lone geniuses making breakthroughs, but in reality, it is a history of infrastructure, labor, and global networks. In the early 20th century, Harvard’s Boyden Observatory and Yale’s Southern Station were established in South Africa to give American astronomers access to the Southern Hemisphere skies they couldn’t see from the North. At Boyden, observations of Cepheid variable stars led to the discovery of the period-luminosity law, which remains fundamental to how astronomers measure distances to faraway galaxies. Yet, while these scientific achievements are well-documented, the Black South African workers who built and maintained these observatories remain absent from the historical record. My Master’s thesis, The Extractive Gaze: Race and Capitalism in the Development of American Astronomical Stations in South Africa, examines how these observatories operated within a system of racial capitalism, where Black workers, despite playing a crucial role in scientific infrastructure, faced restricted land rights and economic opportunities. By tracing their role through observatory records, personal accounts, and histories of Black labor movements, this research reveals how global scientific expansion has often depended on overlooked labor and unequal power structures. Recognizing these histories not only deepens our understanding of astronomy’s past but also fosters a more inclusive vision for its future. This work will be made publicly available after my graduation in May 2025.},
-  year={2025},
-  preview={boyden_carina_workers.jpg}
-} 
-
-
-@leadunpublished{omoruyi2025jwst,
-  title={A JWST MIRI View of the Heart of Abell 2597},
-  author={Omoruyi, O. and Tremblay, G. and Ashby, M. and Baum, S. and Blanton, E. and Bremer, M. and Bulbul, G. and Clarke, T. and Combes, F. and Connor, T. and David, L. and Davis, T. and Donahue, M. and Edge, A. and Edwards, L. and Fabian, A. and Forman, W. and Gaspari, M. and Grace, S. and Greene, J. and Hamer, S. and Jones, C. and Kraft, R. and Li, Y. and McDonald, M. and McNamara, B. and Nevin, R. and Nulsen, P. and O’Dea, C. and Ogle, P. and Oonk, R. and Powell, M. and Randall, Reefe, M. and Russell, H. and Salome, P. and Schechter, A. and Simionescu, A. and Starikova, S. and Su, Y. and Sun, M. and Terrazas, B. and Urry, C. and Vantyghem, A. and Vikhlinin, A. and Voit, M. and Wilkes, B. and Worku, K. and ZuHone, J.},
-  year={2025},
-  numpages={20},
-  journal=apj,
+@leadunpublished{omoruyi2026jwst,
+  title={A JWST MIRI and NIRSpec View of the Heart of Abell 2597},
+  author={Omoruyi, O. and Tremblay, G. and Ashby, M. and Baum, S. and Blanton, E. and Bremer, M. and Bulbul, G. and Clarke, T. and Combes, F. and Connor, T. and David, L. and Davis, T. and Donahue, M. and Edge, A. and Edwards, L. and Fabian, A. and Forman, W. and Gaspari, M. and Grace, S. and Greene, J. and Hamer, S. and Jones, C. and Kraft, R. and Li, Y. and McDonald, M. and McNamara, B. and Nevin, R. and Nulsen, P. and O’Dea, C. and Ogle, P. and Oonk, R. and Powell, M. and Randall, S. and Reefe, M. and Russell, H. and Salome, P. and Schechter, A. and Simionescu, A. and Starikova, S. and Su, Y. and Sun, M. and Terrazas, B. and Urry, C. and Vantyghem, A. and Vikhlinin, A. and Voit, M. and Wilkes, B. and Worku, K. and ZuHone, J.},
+  year={2026},
   preview={a2597_jwst.png},
   type={lead},
-  additional_info={*PDF available December, expected on arXiv January*}
+  additional_info={In preparation. Expected on arXiv February 2026},
+  abstract={Using new JWST MIRI and NIRSpec IFU observations of the core of Abell 2597, we present mid-infrared and near-infrared spectra revealing numerous emission lines tracing warm molecular gas, ionized gas, and dust, including several features consistent with shock excitation.}
+}
+
+@leadunpublished{omoruyi2027hist,
+  title={The Extractive Gaze: How Race, Gender and Capitalism Shaped the Development of American Astronomical Stations in South Africa},
+  author={Omoruyi, O.},
+  abstract={Who is remembered in the history of science? Who gets credit for scientific discovery? Astronomy is often told as a story of lone geniuses making breakthroughs, but in reality, it is a history of infrastructure, labor, and global networks. In the early 20th century, Harvard’s Boyden Observatory and Yale’s Southern Station were established in South Africa to give American astronomers access to the Southern Hemisphere skies they couldn’t see from the North. At Boyden, observations of Cepheid variable stars led to the discovery of the period-luminosity law, which remains fundamental to how astronomers measure distances to faraway galaxies. Yet, while these scientific achievements are well-documented, the Black South African workers who built and maintained these observatories remain absent from the historical record. My Master’s thesis, The Extractive Gaze: Race and Capitalism in the Development of American Astronomical Stations in South Africa, examines how these observatories operated within a system of racial capitalism, where Black workers, despite playing a crucial role in scientific infrastructure, faced restricted land rights and economic opportunities. By tracing their role through observatory records, personal accounts, and histories of Black labor movements, this research reveals how global scientific expansion has often depended on overlooked labor and unequal power structures. Recognizing these histories not only deepens our understanding of astronomy’s past but also fosters a more inclusive vision for its future.},
+  year={2027},
+  preview={boyden_carina_workers.jpg}
+  additional_info={This work will be made publicly available in May 2027.}
 } 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+% CONTIRBUTING
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 @coarticle{singha2023interplay,
   title={The Close AGN Reference Survey (CARS): An interplay between radio jets, AGN radiation in the radio-quiet AGN HE 0040-1105},
