--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,7 +64,7 @@
   author={Omoruyi, O.},
   abstract={Who is remembered in the history of science? Who gets credit for scientific discovery? Astronomy is often told as a story of lone geniuses making breakthroughs, but in reality, it is a history of infrastructure, labor, and global networks. In the early 20th century, Harvard’s Boyden Observatory and Yale’s Southern Station were established in South Africa to give American astronomers access to the Southern Hemisphere skies they couldn’t see from the North. At Boyden, observations of Cepheid variable stars led to the discovery of the period-luminosity law, which remains fundamental to how astronomers measure distances to faraway galaxies. Yet, while these scientific achievements are well-documented, the Black South African workers who built and maintained these observatories remain absent from the historical record. My Master’s thesis, The Extractive Gaze: Race and Capitalism in the Development of American Astronomical Stations in South Africa, examines how these observatories operated within a system of racial capitalism, where Black workers, despite playing a crucial role in scientific infrastructure, faced restricted land rights and economic opportunities. By tracing their role through observatory records, personal accounts, and histories of Black labor movements, this research reveals how global scientific expansion has often depended on overlooked labor and unequal power structures. Recognizing these histories not only deepens our understanding of astronomy’s past but also fosters a more inclusive vision for its future.},
   year={2027},
-  preview={boyden_carina_workers.jpg}
+  preview={boyden_carina_workers.jpg},
   additional_info={This work will be made publicly available in May 2027.}
 } 
 
