bib and cv update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,19 +33,19 @@
   preview={a2597_chandra.png},
   pdf={omo_a2597.pdf},
   type={lead},
-  additional_info={Accepted to ApJ. Expected on arXiv soon},
+  additional_info={*Accepted to ApJ. Expected on arXiv soon.*},
   abstract={Using deep $\sim$600 ks Chandra observations with archival GMRT and SINFONI data, we mapped the impact of repeated AGN outbursts in Abell 2597, revealing seven cavities, weak shocks to $\sim$150 kpc, and a 57 kpc surface brightness deficit likely shaped by sloshing-driven magnetic amplification. We show that although the AGN injects energy comparable to the cooling luminosity, radiative cooling persists at $\sim$15 $M_\odot$ yr$^{-1}$, fueling a massive cold gas reservoir that Bondi accretion cannot supply. These results support chaotic cold accretion as the dominant fueling mode and provide a detailed view of how cooling, feedback, and gas dynamics regulate cool-core cluster evolution.}
 }
 
 @leadunpublished{omoruyi2026tngsam,
   title={Emulating the IllustrisTNG Simulation with a Semi-analytic Model},
-  author={Omoruyi, O. and Terrazas, B. and Cohen, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
+  author={Omoruyi, O. and Terrazas, B. and Gabrielpillai, A. and Oren, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
   year={2026},
   journal=mnras,
   preview={tngsam.png},
   pdf={tngsam.pdf},
   type={lead},
-  additional_info={Submitted to MNRAS. Expected on arXiv January 2026},
+  additional_info={*Submitted to MNRAS. Expected on arXiv January 2026*},
   abstract={By combining the strengths of the Santa Cruz semi-analytic model and the IllustrisTNG100 simulation, we developed the TNG SAM, a fast model calibrated to reproduce TNG’s gas and metal flows in stellar-feedback–dominated galaxies. We show that physically motivated updates to cooling, star formation, recycling, outflows, and gas re-accretion allow the SAM to recover TNG’s baryon cycle and global galaxy properties to within $\sim$30\% out to $z=6$. This work demonstrates that well-calibrated SAMs can capture much of the complex physics of hydrodynamical simulations while enabling efficient parameter studies across cosmological volumes.}
 }
 
@@ -55,7 +55,7 @@
   year={2026},
   preview={a2597_jwst.png},
   type={lead},
-  additional_info={In preparation. Expected on arXiv February 2026},
+  additional_info={*In preparation. Expected on arXiv in 2026*},
   abstract={Using new JWST MIRI and NIRSpec IFU observations of the core of Abell 2597, we present mid-infrared and near-infrared spectra revealing numerous emission lines tracing warm molecular gas, ionized gas, and dust, including several features consistent with shock excitation.}
 }
 
@@ -65,12 +65,24 @@
   abstract={Who is remembered in the history of science? Who gets credit for scientific discovery? Astronomy is often told as a story of lone geniuses making breakthroughs, but in reality, it is a history of infrastructure, labor, and global networks. In the early 20th century, Harvard’s Boyden Observatory and Yale’s Southern Station were established in South Africa to give American astronomers access to the Southern Hemisphere skies they couldn’t see from the North. At Boyden, observations of Cepheid variable stars led to the discovery of the period-luminosity law, which remains fundamental to how astronomers measure distances to faraway galaxies. Yet, while these scientific achievements are well-documented, the Black South African workers who built and maintained these observatories remain absent from the historical record. My Master’s thesis, The Extractive Gaze: Race and Capitalism in the Development of American Astronomical Stations in South Africa, examines how these observatories operated within a system of racial capitalism, where Black workers, despite playing a crucial role in scientific infrastructure, faced restricted land rights and economic opportunities. By tracing their role through observatory records, personal accounts, and histories of Black labor movements, this research reveals how global scientific expansion has often depended on overlooked labor and unequal power structures. Recognizing these histories not only deepens our understanding of astronomy’s past but also fosters a more inclusive vision for its future.},
   year={2027},
   preview={boyden_carina_workers.jpg},
-  additional_info={This work will be made publicly available in May 2027.}
+  additional_info={*This work will be made publicly available in May 2027 or earlier.*}
 } 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 % CONTIRBUTING
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+
+@counpublished{oren2025baryoncycle,
+  title={The Cosmic Baryon Cycle in IllustrisTNG: Flows of Mass, Energy, and Metals},
+  author={Oren, Y. and Pandya, V. and Somerville, R. S. and Genel, S. and Omoruyi, O. and Sternberg, A.},
+  year={2025},
+  journal=mnras,
+  type={contributing},
+  additional_info={*Submitted to Monthly Notices of the Royal Astronomical Society*},
+  preview={oren25.png},
+  html={https://doi.org/10.48550/arXiv.2510.23343},
+  abstract={Using the IllustrisTNG100 simulation, we measured the flows of mass, metals, and energy through the ISM and CGM to trace how galaxies exchange material with their environments across cosmic time. We find that early galaxies experience strong inflows, while the onset of kinetic AGN feedback in massive halos later brings inflows and outflows into balance and drives quenching, offering a clear picture of how different feedback channels regulate galaxy growth in TNG. I performed detailed cross-checks to ensure the physical soundness of the galaxy sample and tested the resulting flow catalogs for their utility in the Santa Cruz semi-analytic model, directly shaping the calibration of the TNG SAM in Omoruyi+26a.}
+}
 
 @coarticle{singha2023interplay,
   title={The Close AGN Reference Survey (CARS): An interplay between radio jets, AGN radiation in the radio-quiet AGN HE 0040-1105},
@@ -82,7 +94,8 @@
   type={contributing},
   preview={singha23.png},
   html={https://ui.adsabs.harvard.edu/abs/2023ApJ...959..107S/abstract},
-  year={2023}
+  year={2023},
+  abstract={Combining VLT/MUSE, HST, VLA, and VLBI observations, we identified multiple components of ionized gas in HE 0040-1105, including a compact outflow likely powered by a weak jet. We find that the outflow velocities are too low to escape and may cycle back into the galaxy, pointing to a self-regulating feedback loop in the nucleus. I reduced the HST NUV data and identified clumpy nuclear gas, providing key evidence that the system is a late-stage merger remnant.}
 }
 
 @counpublished{singha2025quenched,
@@ -92,8 +105,10 @@
   journal=apj,
   type={contributing},
   preview={singha24.png},
-  additional_info={*Submitted to ApJ, expected on arXiv June 2025*}
+  additional_info={*Submitted to ApJ, expected on arXiv in 2026*},
+  abstract={Using optical IFU and millimeter observations, we identified a galaxy in which AGN-driven ionized outflows have depleted the central reservoir of molecular gas. The data suggest that the outflows directly suppressed star formation by removing or destroying the gas needed to form new stars, providing a clear example of AGN-driven quenching. I reduced and analyzed the archival ALMA data, revealing the distinct depletion of molecular gas along the outflow's path and strengthening the interpretation of AGN-regulated quenching.}
 }
+
 
 @counpublished{ogle2025jwst,
   title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
@@ -103,15 +118,6 @@
   type={contributing},
   preview={ogle24.png},
   additional_info={*Accepted to ApJ*}
-}
-
-@counpublished{cohen2025cosmic,
-  title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
-  year={2025},
-  journal=mnras,
-  type={contributing},
-  author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
-  additional_info={*In preparation. Expected on arXiv by late S25*}
 }
 
 @counpublished{elford2025close,
