update bibs and pdfs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
   preview={a2597_chandra.png},
   pdf={omo_a2597.pdf},
   type={lead},
-  additional_info={*Accepted to ApJ. Expected on arXiv soon.*},
+  additional_info={*Accepted to ApJ. Expected on arXiv soon*},
   abstract={Using deep $\sim$600 ks Chandra observations with archival GMRT and SINFONI data, we mapped the impact of repeated AGN outbursts in Abell 2597, revealing seven cavities, weak shocks to $\sim$150 kpc, and a 57 kpc surface brightness deficit likely shaped by sloshing-driven magnetic amplification. We show that although the AGN injects energy comparable to the cooling luminosity, radiative cooling persists at $\sim$15 $M_\odot$ yr$^{-1}$, fueling a massive cold gas reservoir that Bondi accretion cannot supply. These results support chaotic cold accretion as the dominant fueling mode and provide a detailed view of how cooling, feedback, and gas dynamics regulate cool-core cluster evolution.}
 }
 
@@ -45,7 +45,7 @@
   preview={tngsam.png},
   pdf={tngsam.pdf},
   type={lead},
-  additional_info={*Submitted to MNRAS. Expected on arXiv January 2026*},
+  additional_info={*Submitted to MNRAS*},
   abstract={By combining the strengths of the Santa Cruz semi-analytic model and the IllustrisTNG100 simulation, we developed the TNG SAM, a fast model calibrated to reproduce TNG’s gas and metal flows in stellar-feedback–dominated galaxies. We show that physically motivated updates to cooling, star formation, recycling, outflows, and gas re-accretion allow the SAM to recover TNG’s baryon cycle and global galaxy properties to within $\sim$30\% out to $z=6$. This work demonstrates that well-calibrated SAMs can capture much of the complex physics of hydrodynamical simulations while enabling efficient parameter studies across cosmological volumes.}
 }
 
@@ -55,7 +55,7 @@
   year={2026},
   preview={a2597_jwst.png},
   type={lead},
-  additional_info={*In preparation. Expected on arXiv in 2026*},
+  additional_info={*In preparation*},
   abstract={Using new JWST MIRI and NIRSpec IFU observations of the core of Abell 2597, we present mid-infrared and near-infrared spectra revealing numerous emission lines tracing warm molecular gas, ionized gas, and dust, including several features consistent with shock excitation.}
 }
 
@@ -63,7 +63,6 @@
   title={The Extractive Gaze: How Race, Gender and Capitalism Shaped the Development of American Astronomical Stations in South Africa},
   author={Omoruyi, O.},
   abstract={Who is remembered in the history of science? Who gets credit for scientific discovery? Astronomy is often told as a story of lone geniuses making breakthroughs, but in reality, it is a history of infrastructure, labor, and global networks. In the early 20th century, Harvard’s Boyden Observatory and Yale’s Southern Station were established in South Africa to give American astronomers access to the Southern Hemisphere skies they couldn’t see from the North. At Boyden, observations of Cepheid variable stars led to the discovery of the period-luminosity law, which remains fundamental to how astronomers measure distances to faraway galaxies. Yet, while these scientific achievements are well-documented, the Black South African workers who built and maintained these observatories remain absent from the historical record. My Master’s thesis, The Extractive Gaze: Race and Capitalism in the Development of American Astronomical Stations in South Africa, examines how these observatories operated within a system of racial capitalism, where Black workers, despite playing a crucial role in scientific infrastructure, faced restricted land rights and economic opportunities. By tracing their role through observatory records, personal accounts, and histories of Black labor movements, this research reveals how global scientific expansion has often depended on overlooked labor and unequal power structures. Recognizing these histories not only deepens our understanding of astronomy’s past but also fosters a more inclusive vision for its future.},
-  year={2027},
   preview={boyden_carina_workers.jpg},
   additional_info={*This work will be made publicly available in May 2027 or earlier.*}
 } 
@@ -84,6 +83,51 @@
   abstract={Using the IllustrisTNG100 simulation, we measured the flows of mass, metals, and energy through the ISM and CGM to trace how galaxies exchange material with their environments across cosmic time. We find that early galaxies experience strong inflows, while the onset of kinetic AGN feedback in massive halos later brings inflows and outflows into balance and drives quenching, offering a clear picture of how different feedback channels regulate galaxy growth in TNG. I performed detailed cross-checks to ensure the physical soundness of the galaxy sample and tested the resulting flow catalogs for their utility in the Santa Cruz semi-analytic model, directly shaping the calibration of the TNG SAM in Omoruyi+26a.}
 }
 
+@counpublished{singha2025quenched,
+  title={A quenched galaxy at the site of supermassive black hole feedback},
+  author={Singha, M. and Scharwächter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Pérez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O’Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
+  year={2025},
+  journal=apj,
+  type={contributing},
+  preview={singha24.png},
+  additional_info={*Submitted to ApJ*},
+  abstract={Using optical IFU and millimeter observations, we identified a galaxy in which AGN-driven ionized outflows have depleted the central reservoir of cold molecular gas. The data suggest that the outflows directly suppressed star formation by removing or destroying the gas needed to form new stars, providing a clear example of AGN-driven quenching. I reduced and analyzed the archival ALMA data, revealing the distinct depletion of molecular gas along the outflow's path and strengthening the interpretation of AGN-regulated quenching.}
+}
+
+@counpublished{dunn2025mrk1018,
+  title={A Century of Change: New Changing-Look Event in Mrk 1018’s Past},
+  author={Dunn, T. and McElroy, R. and Krumpe, M. and Croom, S. M. and Gaspari, M. and Pérez-Torres, M. and Cowley, M. and Omoruyi, O. and Tremblay, G. R. and Singha, M.},
+  year={2025},
+  journal={Publications of the Astronomical Society of Australia},
+  type={contributing},
+  preview={dunn25.jpg},
+  additional_info={*Submitted to Publications of the Astronomical Society of Australia*},
+  html={https://doi.org/10.48550/arXiv.2510.25156},
+  abstract={Using over a century of archival photographic plates and modern survey data, we uncovered a previously unknown bright phase of the changing-look AGN Mrk 1018 in the mid-20th century. We show that its decades-long variability pattern is consistent with stochastic changes in the accretion flow rather than strict periodicity, extending the historical baseline for the behavior of changing-look AGN. I provided detailed comments on the analysis and interpretation.}
+}
+
+@coarticle{elford2025carsdiagnostics,
+  title={The Close AGN Reference Survey (CARS): A Comparison between Sub-Mm and Optical AGN Diagnostic Diagrams},
+  author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Baum, S. A. and Combes, F. and Gaspari, M. and McElroy, R. and O’Dea, C. P. and Omoruyi, O. and Singha, M. and Tremblay, G. R. and Winkel, N.},
+  year={2025},
+  journal=mnras,
+  type={contributing},
+  preview={elfor.jpeg},
+  html={https://doi.org/10.1093/mnras/staf1096},
+  abstract={Using ALMA observations of dense-gas tracers in nearby AGN, we compared sub-millimeter diagnostic diagrams against classic optical emission-line classifications. We find broad agreement between the two methods, demonstrating that AGN imprint consistent signatures across both ionized and dense molecular gas phases. I provided detailed feedback to enhance the clarity of the observational data presentation and the physical picture emerging from the analysis.}
+}
+
+@coarticle{ogle2025jwst,
+  title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
+  author={Ogle, P. M. and Sebastian, B. and Aravindan, A. and McDonald, M. and Canalizo, G. and Perley, R. A. and Ashby, M. and Azadi, M. and Antonucci, R. and Barthel, P. and Baum, S. A. and Birkinshaw, M. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kuraszkiewicz, J. and Lopez-Rodriguez, E. and Medling, A. and Miley, G. and Omoruyi, O. and O’Dea, C. and Perlman, E. and Reynaldi, V. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
+  journal={The Astrophysical Journal},
+  year={2025},
+  type={contributing},
+  preview={ogle24.png},
+  html={https://doi.org/10.3847/1538-4357/adb71a},
+  abstract={Using JWST NIRSpec and MIRI spectroscopy combined with KCWI data, we mapped a rotating, multi-phase outflow in Cygnus A that is strongly shaped by the radio jet. We find a biconical, spiral-like flow pattern with dense, high-velocity clumps approaching 2000 km s$^{-1}$, revealing the detailed structure of jet–ISM coupling in a powerful nearby radio galaxy. I provided feedback on the presentation and interpretation of the observational data.}
+}
+
 @coarticle{singha2023interplay,
   title={The Close AGN Reference Survey (CARS): An interplay between radio jets, AGN radiation in the radio-quiet AGN HE 0040-1105},
   author={Singha, M. and Winkel, N. and Vaddi, S. and Perez Torres, M. and Gaspari, M. and Smirnova-Pinchukova, I. and O’Dea, C. P. and Combes, F. and Omoruyi, O. and Rose, T. and McElroy, R. and Husemann, B. and Davis, T. A. and Baum, S. A. and Lawlor-Forsyth, C. and Neumann, J. and Tremblay, G. R.},
@@ -96,35 +140,4 @@
   html={https://ui.adsabs.harvard.edu/abs/2023ApJ...959..107S/abstract},
   year={2023},
   abstract={Combining VLT/MUSE, HST, VLA, and VLBI observations, we identified multiple components of ionized gas in HE 0040-1105, including a compact outflow likely powered by a weak jet. We find that the outflow velocities are too low to escape and may cycle back into the galaxy, pointing to a self-regulating feedback loop in the nucleus. I reduced the HST NUV data and identified clumpy nuclear gas, providing key evidence that the system is a late-stage merger remnant.}
-}
-
-@counpublished{singha2025quenched,
-  title={A quenched galaxy at the site of supermassive black hole feedback},
-  author={Singha, M. and Scharwachter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Perez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O’Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
-  year={2025},
-  journal=apj,
-  type={contributing},
-  preview={singha24.png},
-  additional_info={*Submitted to ApJ, expected on arXiv in 2026*},
-  abstract={Using optical IFU and millimeter observations, we identified a galaxy in which AGN-driven ionized outflows have depleted the central reservoir of molecular gas. The data suggest that the outflows directly suppressed star formation by removing or destroying the gas needed to form new stars, providing a clear example of AGN-driven quenching. I reduced and analyzed the archival ALMA data, revealing the distinct depletion of molecular gas along the outflow's path and strengthening the interpretation of AGN-regulated quenching.}
-}
-
-
-@counpublished{ogle2025jwst,
-  title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
-  author={Ogle, P. and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
-  journal={The Astrophysical Journal},
-  year={2025},
-  type={contributing},
-  preview={ogle24.png},
-  additional_info={*Accepted to ApJ*}
-}
-
-@counpublished{elford2025close,
-  title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
-  author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. and Tremblay, G. R. and Singha, M. and Gaspari, M. and Winkel, N.},
-  year={2025},
-  journal=apj,
-  type={contributing},
-  additional_info={*Submitted to ApJ. Expected on arXiv by late S25*}
 }
